[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asterism-ai"
version = "0.1.0"
description = "An X-ray of your brain — local-first personal knowledge graph built from your conversations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.40.0",
  "openai>=1.35.0",
  "networkx>=3.3",
  "streamlit>=1.35.0",
  "click>=8.1.0",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
]

[tool.setuptools]
py-modules = ["cli", "app", "config", "context", "db", "extractor", "graph", "llm", "render", "decay_scheduler"]

[tool.setuptools.package-dir]
"" = "."

[project.scripts]
asterism = "cli:cli"
